# lvdt

./: Cargo.toml  README.md  calibration.csv  config.yaml  image.tex  test.csv  text
.github/workflows/: rust.yml
input/: 2.csv
output/: lvdt-output-1.csv  lvdt-output-2.csv
src/: calibration.rs  main.rs  plane.rs  plot.rs
src/dof/: one.rs
src/models/: config.rs  mod.rs  output.rs  plane.rs
validation/: .gitignore  calibration.m  data.csv  script.m  um_per_mv.csv  validation.m  variance.csv
validation/calibration/: data.csv  image.tex  mean_variance.csv  variance.csv
validation/instron validation/: Specimen_RawData_1.csv  Specimen_RawData_1.xlsx  Specimen_RawData_2.csv  Specimen_RawData_3.csv
validation/validation/: data-instron-lvdt.csv
