[package]
name = "lvdt"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
csv = "1.3.0"
nalgebra = "0.32.6"
plotters = "0.3.7"
serde = { version = "1.0.209", features = ["derive"] }
clap = { version = "4.5.13", features = ["derive", "help", "suggestions", "usage"] }
serde_yaml = "0.9.34"
